--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0",
     "socket.io": "^2.4.1"
   }
 }
